Quorum/Library/Tests/Expressions/Pass/AddIntInt.quorum
class Main
    action Main
        integer a = 3 + 3
        output a
    end
end