Quorum/Library/Tests/Expressions/Fail/FatInteger.quorum
integer a = 6000000000
output a